# alertA

./: .gitignore  Pipfile  README.md  alerta.py  alerta.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  startup.sh
alerts/: an_alert.yml  multiple_risky_logins.yml
tests/: test_alerts.py
tests/samples/: sample_OneLogin_EventBridge_Raw.json  sample_cloudtrail_event.json  sample_cloudtrail_login_no_mfa.json  sample_meraki_event.json  sample_sophos_event.json  sequence_threshold_deadman_alert.yml
utils/: athena.py  dates.py  dict_helpers.py  dotdict.py  helpers.py  mostcommon.py  plugins.py
